scrollbar fix

--- a/src/components/secondaryContainer/MovieList.css
+++ b/src/components/secondaryContainer/MovieList.css
@@ -1,9 +1,9 @@
 .scrollbar {
   scrollbar-color: black;
-  scrollbar-width: thin;
 }
 
 .scrollbar::-webkit-scrollbar {
+  display: none;
   width: 0px;
 }
 
